tests/snapshots/options__opt_replstr@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: -I .. --preview echo foo {} .."
---
"                                        │foo {} a                               "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"  c                                     │                                       "
"  b                                     │                                       "
"> a                                     │                                       "
"  3/3                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
