tests/snapshots/options__opt_replstr@002.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: -I .. --preview echo foo {} ..\nafter:\n  @char 'a'"
---
"                                        │foo {} a                               "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> a                                     │                                       "
"  1/3                                0/0│                                       "
"> a                                     │                                       "
cursor: (24, 4)
