tests/snapshots/options__opt_scrollbar_reverse@001.snap
---
source: tests/options.rs
description: "input: items SCROLLBAR_ITEMS\noptions: --info=hidden --layout=reverse"
---
">                                                                               "
"> item_01                                                                      ▐"
"  item_02                                                                      ▐"
"  item_03                                                                      ▐"
"  item_04                                                                      ▐"
"  item_05                                                                      ▐"
"  item_06                                                                      ▐"
"  item_07                                                                      ▐"
"  item_08                                                                      ▐"
"  item_09                                                                      ▐"
"  item_10                                                                      ▐"
"  item_11                                                                       "
"  item_12                                                                       "
"  item_13                                                                       "
"  item_14                                                                       "
"  item_15                                                                       "
"  item_16                                                                       "
"  item_17                                                                       "
"  item_18                                                                       "
"  item_19                                                                       "
"  item_20                                                                       "
"  item_21                                                                       "
"  item_22                                                                       "
"  item_23                                                                       "
cursor: (1, 3)
