tests/snapshots/options__opt_scrollbar_scrolled@002.snap
---
source: tests/options.rs
description: "input: items SCROLLBAR_ITEMS\noptions: --info=hidden\nafter:\n  @action Up(10)"
---
"  item_23                                                                       "
"  item_22                                                                       "
"  item_21                                                                       "
"  item_20                                                                       "
"  item_19                                                                      ▐"
"  item_18                                                                      ▐"
"  item_17                                                                      ▐"
"  item_16                                                                      ▐"
"  item_15                                                                      ▐"
"  item_14                                                                      ▐"
"  item_13                                                                      ▐"
"  item_12                                                                      ▐"
"> item_11                                                                      ▐"
"  item_10                                                                      ▐"
"  item_09                                                                       "
"  item_08                                                                       "
"  item_07                                                                       "
"  item_06                                                                       "
"  item_05                                                                       "
"  item_04                                                                       "
"  item_03                                                                       "
"  item_02                                                                       "
"  item_01                                                                       "
">                                                                               "
cursor: (25, 3)
