tests/snapshots/options__opt_scrollbar_thumb_modifiers@color001.snap
---
source: tests/options.rs
description: "input: items (1..=30).map(|i| format!(\"\\x1b[2m{:<78}\\x1b[0m\", format!(\"item_{i:02}\")))\noptions: --info=hidden --ansi"
---
(0, 0..1) " " fg=Indexed(161)
(0, 1..2) " " fg=Indexed(168)
(0, 2..79) "item_23                                                                      " mod=DIM
(0, 79..80) "▐" fg=Indexed(59)
(1, 0..1) " " fg=Indexed(161)
(1, 1..2) " " fg=Indexed(168)
(1, 2..79) "item_22                                                                      " mod=DIM
(1, 79..80) "▐" fg=Indexed(59)
(2, 0..1) " " fg=Indexed(161)
(2, 1..2) " " fg=Indexed(168)
(2, 2..79) "item_21                                                                      " mod=DIM
(2, 79..80) "▐" fg=Indexed(59)
(3, 0..1) " " fg=Indexed(161)
(3, 1..2) " " fg=Indexed(168)
(3, 2..79) "item_20                                                                      " mod=DIM
(3, 79..80) "▐" fg=Indexed(59)
(4, 0..1) " " fg=Indexed(161)
(4, 1..2) " " fg=Indexed(168)
(4, 2..79) "item_19                                                                      " mod=DIM
(4, 79..80) "▐" fg=Indexed(59)
(5, 0..1) " " fg=Indexed(161)
(5, 1..2) " " fg=Indexed(168)
(5, 2..79) "item_18                                                                      " mod=DIM
(5, 79..80) "▐" fg=Indexed(59)
(6, 0..1) " " fg=Indexed(161)
(6, 1..2) " " fg=Indexed(168)
(6, 2..79) "item_17                                                                      " mod=DIM
(6, 79..80) "▐" fg=Indexed(59)
(7, 0..1) " " fg=Indexed(161)
(7, 1..2) " " fg=Indexed(168)
(7, 2..79) "item_16                                                                      " mod=DIM
(7, 79..80) "▐" fg=Indexed(59)
(8, 0..1) " " fg=Indexed(161)
(8, 1..2) " " fg=Indexed(168)
(8, 2..79) "item_15                                                                      " mod=DIM
(8, 79..80) "▐" fg=Indexed(59)
(9, 0..1) " " fg=Indexed(161)
(9, 1..2) " " fg=Indexed(168)
(9, 2..79) "item_14                                                                      " mod=DIM
(9, 79..80) "▐" fg=Indexed(59)
(10, 0..1) " " fg=Indexed(161)
(10, 1..2) " " fg=Indexed(168)
(10, 2..80) "item_13                                                                       " mod=DIM
(11, 0..1) " " fg=Indexed(161)
(11, 1..2) " " fg=Indexed(168)
(11, 2..80) "item_12                                                                       " mod=DIM
(12, 0..1) " " fg=Indexed(161)
(12, 1..2) " " fg=Indexed(168)
(12, 2..80) "item_11                                                                       " mod=DIM
(13, 0..1) " " fg=Indexed(161)
(13, 1..2) " " fg=Indexed(168)
(13, 2..80) "item_10                                                                       " mod=DIM
(14, 0..1) " " fg=Indexed(161)
(14, 1..2) " " fg=Indexed(168)
(14, 2..80) "item_09                                                                       " mod=DIM
(15, 0..1) " " fg=Indexed(161)
(15, 1..2) " " fg=Indexed(168)
(15, 2..80) "item_08                                                                       " mod=DIM
(16, 0..1) " " fg=Indexed(161)
(16, 1..2) " " fg=Indexed(168)
(16, 2..80) "item_07                                                                       " mod=DIM
(17, 0..1) " " fg=Indexed(161)
(17, 1..2) " " fg=Indexed(168)
(17, 2..80) "item_06                                                                       " mod=DIM
(18, 0..1) " " fg=Indexed(161)
(18, 1..2) " " fg=Indexed(168)
(18, 2..80) "item_05                                                                       " mod=DIM
(19, 0..1) " " fg=Indexed(161)
(19, 1..2) " " fg=Indexed(168)
(19, 2..80) "item_04                                                                       " mod=DIM
(20, 0..1) " " fg=Indexed(161)
(20, 1..2) " " fg=Indexed(168)
(20, 2..80) "item_03                                                                       " mod=DIM
(21, 0..1) " " fg=Indexed(161)
(21, 1..2) " " fg=Indexed(168)
(21, 2..80) "item_02                                                                       " mod=DIM
(22, 0..1) ">" fg=Indexed(161)
(22, 1..2) " " fg=Indexed(168)
(22, 2..80) "item_01                                                                       " bg=Indexed(236) mod=DIM
(23, 0..2) "> " fg=Indexed(110)
