tests/snapshots/options__opt_scrollbar_thumb_style@color002.snap
---
source: tests/options.rs
description: "input: items SCROLLBAR_ITEMS\noptions: --info=hidden --highlight-line"
---
(0, 0..1) " " fg=Indexed(161)
(0, 1..2) " " fg=Indexed(168)
(1, 0..1) " " fg=Indexed(161)
(1, 1..2) " " fg=Indexed(168)
(2, 0..1) " " fg=Indexed(161)
(2, 1..2) " " fg=Indexed(168)
(3, 0..1) " " fg=Indexed(161)
(3, 1..2) " " fg=Indexed(168)
(4, 0..1) " " fg=Indexed(161)
(4, 1..2) " " fg=Indexed(168)
(4, 79..80) "▐" fg=Indexed(59)
(5, 0..1) " " fg=Indexed(161)
(5, 1..2) " " fg=Indexed(168)
(5, 79..80) "▐" fg=Indexed(59)
(6, 0..1) " " fg=Indexed(161)
(6, 1..2) " " fg=Indexed(168)
(6, 79..80) "▐" fg=Indexed(59)
(7, 0..1) " " fg=Indexed(161)
(7, 1..2) " " fg=Indexed(168)
(7, 79..80) "▐" fg=Indexed(59)
(8, 0..1) " " fg=Indexed(161)
(8, 1..2) " " fg=Indexed(168)
(8, 79..80) "▐" fg=Indexed(59)
(9, 0..1) " " fg=Indexed(161)
(9, 1..2) " " fg=Indexed(168)
(9, 79..80) "▐" fg=Indexed(59)
(10, 0..1) " " fg=Indexed(161)
(10, 1..2) " " fg=Indexed(168)
(10, 79..80) "▐" fg=Indexed(59)
(11, 0..1) " " fg=Indexed(161)
(11, 1..2) " " fg=Indexed(168)
(11, 79..80) "▐" fg=Indexed(59)
(12, 0..1) ">" fg=Indexed(161)
(12, 1..2) " " fg=Indexed(168)
(12, 2..79) "item_11                                                                      " bg=Indexed(236)
(12, 79..80) "▐" fg=Indexed(59) bg=Indexed(236)
(13, 0..1) " " fg=Indexed(161)
(13, 1..2) " " fg=Indexed(168)
(13, 79..80) "▐" fg=Indexed(59)
(14, 0..1) " " fg=Indexed(161)
(14, 1..2) " " fg=Indexed(168)
(15, 0..1) " " fg=Indexed(161)
(15, 1..2) " " fg=Indexed(168)
(16, 0..1) " " fg=Indexed(161)
(16, 1..2) " " fg=Indexed(168)
(17, 0..1) " " fg=Indexed(161)
(17, 1..2) " " fg=Indexed(168)
(18, 0..1) " " fg=Indexed(161)
(18, 1..2) " " fg=Indexed(168)
(19, 0..1) " " fg=Indexed(161)
(19, 1..2) " " fg=Indexed(168)
(20, 0..1) " " fg=Indexed(161)
(20, 1..2) " " fg=Indexed(168)
(21, 0..1) " " fg=Indexed(161)
(21, 1..2) " " fg=Indexed(168)
(22, 0..1) " " fg=Indexed(161)
(22, 1..2) " " fg=Indexed(168)
(23, 0..2) "> " fg=Indexed(110)
